[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/animations/player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/tile_focus.gd" type="Script" id=3]
[ext_resource path="res://characters/player/tile_focus_rect.tres" type="Shape2D" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 5 )

[node name="player" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 2 )

[node name="player" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "player_facing_right"
playing = true

[node name="world_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="focus_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="tile_focus" type="CollisionShape2D" parent="focus_area"]
position = Vector2( 17, 0 )
shape = ExtResource( 4 )
script = ExtResource( 3 )

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
